# bclproject

./: .gitignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
bclproject/: settings.py  urls.py  wsgi.py
qrapp/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
qrapp/migrations/: 0001_initial.py
qrapp/templates/qrapp/: create_ticket.html  invalid_ticket.html  valid_ticket.html
scripts/: launch.sh
